--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -24,7 +24,7 @@
   </head>
   <body>
     <noscript>
-      Need to enable JavaScript to run this app.
+      You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
     <!--
